8040792: G1: Memory usage calculation uses sizeof(this) instead of sizeof(classname)

A few locations in the code use sizeof(this) which returns the size of the pointer instead of sizeof(classname) which returns the size of the sum of its members. This change fixes these errors and adds a few tests.

Reviewed-by: mgerdin, brutisso